WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102843
HTMLCollection's cache should not be invalidated when id or name attributes are changed
https://bugs.webkit.org/show_bug.cgi?id=102843
Summary
HTMLCollection's cache should not be invalidated when id or name attributes a...
Ryosuke Niwa
Reported
2012-11-20 15:03:21 PST
HTMLCollection's cache should not be invalidated when id or name attributes are changed
Attachments
Fixes the bug
(4.71 KB, patch)
2012-11-20 15:09 PST
,
Ryosuke Niwa
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2012-11-20 15:09:52 PST
Created
attachment 175286
[details]
Fixes the bug
Eric Seidel (no email)
Comment 2
2012-11-20 15:22:14 PST
Comment on
attachment 175286
[details]
Fixes the bug YES. This is easy to test though. Just iterate over table.rows and set a name on each. It will be O(N^2) w/o this fix. Ojan's order-of-magnitude framework makes this trivial.
Ryosuke Niwa
Comment 3
2012-11-20 15:29:22 PST
(In reply to
comment #2
)
> (From update of
attachment 175286
[details]
) > YES. This is easy to test though. Just iterate over table.rows and set a name on each. It will be O(N^2) w/o this fix. Ojan's order-of-magnitude framework makes this trivial.
I've tried that but my test was consistently flaky.
Eric Seidel (no email)
Comment 4
2012-11-20 15:35:23 PST
I didn't have that trouble with his framework, but I guess YMMV? Sadly the tests I wrote in this style are on a different machine I may not have access to for a week.
Rafael Brandao
Comment 5
2012-11-20 15:35:55 PST
Comment on
attachment 175286
[details]
Fixes the bug View in context:
https://bugs.webkit.org/attachment.cgi?id=175286&action=review
> Source/WebCore/dom/DynamicNodeList.h:83 > + void invalididateIdNameCacheMaps() const;
Typo on "invalididate", should be "invalidate", right?
Ryosuke Niwa
Comment 6
2012-11-20 15:41:20 PST
Committed
r135321
: <
http://trac.webkit.org/changeset/135321
>
Ryosuke Niwa
Comment 7
2012-11-20 16:08:09 PST
Fixed typos in
http://trac.webkit.org/changeset/135323
and
http://trac.webkit.org/changeset/135327
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug