Source/WebCore/dom/ElementRareData.h
@@ -84,13 +84,9 @@ public:
         if (!m_cachedCollections)
             return;
 
-        bool shouldIgnoreType = !attrName || *attrName == HTMLNames::idAttr || *attrName == HTMLNames::nameAttr;
-
         for (unsigned i = 0; i < (*m_cachedCollections).size(); i++) {
-            if (HTMLCollection* collection = (*m_cachedCollections)[i]) {
-                if (shouldIgnoreType || DynamicNodeListCacheBase::shouldInvalidateTypeOnAttributeChange(collection->invalidationType(), *attrName))
-                    collection->invalidateCache();
-            }
+            if (HTMLCollection* collection = (*m_cachedCollections)[i])
+                collection->invalidateCache(attrName);
         }
     }
 
